# conan-cmake-template

./: CMakeLists.txt  CMakeSettings.json  conanfile.py  main.cpp
cmake/: conan-setup.cmake
